# ai-log-analyzer

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_llm.py
app/: config.py  main.py
app/api/: routes.py
app/static/: index.html
app/utils/: llm_analyzer.py  log_parser.py
