[project]
name = "log-analyzer"
version = "0.1.0"
description = "AI-powered log analyzer using OpenAI for error detection and suggestions"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.127.1",
    "openai>=2.14.0",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]

[tool.uv.workspace]
members = [
    "log-analyzer",
]
